@@ -44,12 +44,15 @@
 int
 ttyname_r(int file_descriptor,char *name,size_t buflen)
 {
+	BOOL is_tty = FALSE;
 	struct fd *fd;
 	int result;
 
 	ENTER();
 
 	SHOWVALUE(file_descriptor);
+
+	__stdio_lock();
 
 	fd = __get_file_descriptor(file_descriptor);
 	if(fd == NULL)
@@ -58,7 +61,76 @@ ttyname_r(int file_descriptor,char *name,size_t buflen)
 		goto out;
 	}
 
-	if(FLAG_IS_CLEAR(fd->fd_Flags,FDF_IS_INTERACTIVE))
+	__fd_lock(fd);
+
+	#if defined(__THREAD_SAFE)
+	{
+		if(FLAG_IS_SET(fd->fd_Flags,FDF_STDIO))
+		{
+			BPTR file;
+
+			switch(fd->fd_DefaultFile)
+			{
+				case STDIN_FILENO:
+
+					file = Input();
+					break;
+
+				case STDOUT_FILENO:
+
+					file = Output();
+					break;
+
+				case STDERR_FILENO:
+
+					#if defined(__amigaos4__)
+					{
+						file = ErrorOutput();
+					}
+					#else
+					{
+						struct Process * this_process = (struct Process *)FindTask(NULL);
+
+						file = this_process->pr_CES;
+					}
+					#endif /* __amigaos4__ */
+
+					/* The following is rather controversial; if the standard error stream
+					   is unavailable, we default to reuse the standard output stream. This
+					   is problematic if the standard output stream was redirected and should
+					   not be the same as the standard error output stream. */
+					if(file == ZERO)
+						file = Output();
+
+					break;
+
+				default:
+
+					file = ZERO;
+					break;
+			}
+
+			__fd_lock(fd);
+
+			if(file != ZERO && IsInteractive(file))
+				is_tty = TRUE;
+
+			__fd_unlock(fd);
+		}
+		else
+		{
+			if(FLAG_IS_SET(fd->fd_Flags,FDF_IS_INTERACTIVE))
+				is_tty = TRUE;
+		}
+	}
+	#else
+	{
+		if(FLAG_IS_SET(fd->fd_Flags,FDF_IS_INTERACTIVE))
+			is_tty = TRUE;
+	}
+	#endif /* __THREAD_SAFE */
+
+	if(NOT is_tty)
 	{
 		result = ENOTTY;
 		goto out;
@@ -75,6 +147,10 @@ ttyname_r(int file_descriptor,char *name,size_t buflen)
 	result = OK;
 
  out:
+
+	__fd_unlock(fd);
+
+	__stdio_unlock();
 
 	RETURN(result);
 	return(result);
